# PatientFlowSim

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: default_config.yaml  default_layout.json  satisfaction_rules.yaml  scenarios.yaml
dashboard/: __init__.py  app_state.py  controls.py  editor_screen.py  floorplan_tab.py  live_simulation.py  overview.py  patient_table.py  queue_charts.py  resource_charts.py  results_screen.py  return_flow_charts.py  satisfaction_charts.py  setup_screen.py  styles.py
data/: example_output.csv  synthetic_patients.csv
docs/: assumptions.md  bottleneck_detection.md  floorplan_editor.md  gif_export.md  interface_design.md  limitations.md  live_simulation.md  methodology.md  queue_policies.md  results_screen.md  satisfaction_model.md  spatial_animation.md
frontend/floorplan_component/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/floorplan_component/src/: Legend.tsx  (+16 more)
src/patientflowsim/: __init__.py  analysis.py  animation.py  arrivals.py  check_in.py  config.py  consultation.py  event_log.py  examinations.py  floorplan_component.py  gif_export.py  layout.py  metrics.py  patient.py  resources.py  satisfaction.py  scenarios.py  seating.py  simulation.py  spatial_events.py  triage.py  visualisation.py
tests/: test_analysis.py  test_arrivals.py  test_config.py  test_gif_export.py  test_interface_state.py  test_layout.py  test_metrics.py  test_patient_flow.py  test_reproducibility.py  test_resource_queues.py  test_return_flow.py  test_satisfaction.py  test_seating.py  test_spatial_events.py
