[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patientflowsim"
version = "0.2.0"
description = "Synthetic outpatient patient-flow simulation"
requires-python = ">=3.11"
dependencies = ["simpy>=4.1", "pandas>=2.0", "numpy>=1.24", "PyYAML>=6.0", "plotly>=5.0", "streamlit>=1.30", "Pillow>=10.0", "imageio>=2.34"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
